--- a/src/starbash/recipes/osc_single_duo/starbash.toml
+++ b/src/starbash/recipes/osc_single_duo/starbash.toml
@@ -24,7 +24,7 @@ auto.for-filter = ["HaOiii"]
 auto.for-camera = ["OSC"]
 
 tool.name = "siril"
-when = "session-light" # run once per session-config
+when = "session.light" # run once per session.config
 output = "FIXME"
 
 script = '''
@@ -46,7 +46,7 @@ temporaries = ["FIXME"]
 disabled = true # FIXME, we don't yet have auto selection based on filter types
 
 tool.name = "python"
-when = "session-stack" # run once after all session/session-config processing was done
+when = "session.stack" # run once after all session/session.config processing was done
 
 script-file = "script.py"
 
