--- a/src/starbash/recipes/master_bias/starbash.toml
+++ b/src/starbash/recipes/master_bias/starbash.toml
@@ -14,10 +14,10 @@ disabled = false # FIXME, debugging later stuff
 
 # Restrict processing of this stage to only if detected hardware was found for this session
 # For any camera
-auto.for-camera = []
+# auto.for-camera = []
 
 tool.name = "siril"
-tool.timeout = 15.0 # allow up to 15 seconds before we timeout and kill tool
+# tool.timeout = 15.0 # allow up to 15 seconds before we timeout and kill tool
 
 # or auto?
 # find the most recent raw fits for the current instrument (as of the time of session start)
@@ -26,16 +26,11 @@ input.type = "bias" # look in all raw repos, but look only for bias files
 
 # Look for files in input repos, finding them by using the "relative" tag they contain
 input.source = "repo"
-# input.path = ".../from_astroboy/masters-raw/2025-09-09/BIAS/*.fit*"
 input.required = true # Is at least one input file required?  If true, we will skip running this stage entirely (with a warning)
+# old school paths also work (but are not recommended)
+# input.path = ".../from_astroboy/masters-raw/2025-09-09/BIAS/*.fit*"
 
-# make the following also work
-#
-#os.makedirs(os.path.dirname(output), exist_ok=True)
-#os.makedirs(os.path.dirname(process_dir), exist_ok=True)
-#frames = glob(f"{masters_raw}/{date}/BIAS/{date}_*.fit*")
-#siril_run_in_temp_dir(frames, ...
-when = "setup.masters" # run when master biases are regenerated
+when = "setup.master.bias" # run when master biases are regenerated
 
 # Based on the following definitions in the stage toml file...
 output.dest = "repo" # write to a particular repo
