make master finding work

--- a/src/starbash/recipes/osc_dual_duo/starbash.toml
+++ b/src/starbash/recipes/osc_dual_duo/starbash.toml
@@ -79,6 +79,9 @@ tool.name = "python"
 
 when = "session.stack" # run once after all session/session.config processing was done
 
+input.master.bias = true
+input.master.flat = true
+
 # if not specified starbash.py used
 # script-file = "script.py"
 
