--- a/src/starbash/recipes/master_bias/starbash.toml
+++ b/src/starbash/recipes/master_bias/starbash.toml
@@ -26,7 +26,7 @@ input.type = "bias" # look in all raw repos, but look only for bias files
 
 # Look for files in input repos, finding them by using the "relative" tag they contain
 input.source = "repo"
-input.required = true # Is at least one input file required?  If true, we will skip running this stage entirely (with a warning)
+input.required = 2 # siril needs at least 2 frames to stack
 # old school paths also work (but are not recommended)
 # input.path = ".../from_astroboy/masters-raw/2025-09-09/BIAS/*.fit*"
 
