--- a/src/starbash/recipes/starbash.toml
+++ b/src/starbash/recipes/starbash.toml
@@ -5,6 +5,8 @@ kind = "repo"
 [[repo-ref]]
 dir = "master_bias"
 [[repo-ref]]
+dir = "master_dark"
+[[repo-ref]]
 dir = "master_flat"
 
 # Note: For automated recipe finding, it is important to list more demanding recipes first.  For instance:
