--- a/src/starbash/recipes/master_dark/starbash.toml
+++ b/src/starbash/recipes/master_dark/starbash.toml
@@ -12,17 +12,18 @@ author.email = "FIXMESiril?"
 description = "Generate master dark"
 
 tool.name = "siril"
+tool.timeout = 30
 
 input.type = "dark"
 
 # Look for files in input repos, finding them by using the "relative" tag they contain
 input.source = "repo"
-input.required = 2 # siril needs at least 2 frames to stack
+input.required = 2    # siril needs at least 2 frames to stack
 
 when = "setup.master.dark" # run when master darks are regenerated
 
 # Based on the following definitions in the stage toml file...
-output.dest = "repo" # write to a particular repo
+output.dest = "repo"   # write to a particular repo
 output.type = "master" # write output to the special masters repo
 
 script = '''
