--- a/src/starbash/recipes/starbash.toml
+++ b/src/starbash/recipes/starbash.toml
@@ -32,28 +32,28 @@ dir = "osc_single_duo"
 # master specific stages
 #
 [[master-stages]]
-name = "setup.master.bias" # generate master bias frames
+name = "master-bias" # generate master bias frames
 priority = 10
 
 [[master-stages]]
-name = "setup.master.dark" # generate master bias frames
+name = "master-dark" # generate master dark frames
 priority = 10
 
 [[master-stages]]
-name = "setup.master.flat" # generate master flat frames
+name = "master-flat" # generate master flat frames
 priority = 20
 
 #
-# session specific processing stages
+# session specific processing stages, not currently used, for now I just do this list from code
 #
-[[stages]]
-name = "session.config" # for flat processing, master generation etc
-priority = 10
+#[[stages]]
+#name = "session.config" # for flat processing, master generation etc
+#priority = 10
 
-[[stages]]
-name = "session.light" # generate light frames from lights and with reference to flats/bias
-priority = 20
+#[[stages]]
+#name = "session.light" # generate light frames from lights and with reference to flats/bias
+#priority = 20
 
-[[stages]]
-name = "session.stack" # stack frames
-priority = 30
+#[[stages]]
+#name = "session.stack" # stack frames
+#priority = 30
