--- a/src/starbash/recipes/master_dark/starbash.toml
+++ b/src/starbash/recipes/master_dark/starbash.toml
@@ -7,7 +7,7 @@ kind = "recipe"
 author.name = "FIXMESiril?"
 author.email = "FIXMESiril?"
 
-[[stage]]
+[recipe.stage.master-dark]
 
 description = "Generate master dark"
 
@@ -19,8 +19,6 @@ input.type = "dark"
 # Look for files in input repos, finding them by using the "relative" tag they contain
 input.source = "repo"
 input.required = 2    # siril needs at least 2 frames to stack
-
-when = "setup.master.dark" # run when master darks are regenerated
 
 # Based on the following definitions in the stage toml file...
 output.dest = "repo"   # write to a particular repo
