--- a/src/starbash/recipes/master_flat/starbash.toml
+++ b/src/starbash/recipes/master_flat/starbash.toml
@@ -8,7 +8,7 @@ author.name = "FIXMESiril?"
 author.email = "FIXMESiril?"
 
 
-[[stage]]
+[recipe.stage.master-flat]
 
 # See master_bias/starbash.toml for more documentation
 
@@ -25,16 +25,14 @@ input.type = "flat" # look in all raw repos, but look only for flat files
 
 # Look for files in input repos, finding them by using the "relative" tag they contain
 input.source = "repo"
-input.required = 2 # siril needs at least 2 frames to stack
+input.required = 2    # siril needs at least 2 frames to stack
 
 # We require a master bias frame for this recipe.  By the time our recipe is invoked
 # context.master.bias will have been set to a full path to a master bias frame
 input.masters = ["bias"]
 
-when = "setup.master.flat" # run when master biases are regenerated
-
 # Based on the following definitions in the stage toml file...
-output.dest = "repo" # write to a particular repo
+output.dest = "repo"   # write to a particular repo
 output.type = "master" # write output to the special masters repo
 
 # FIXME for early development we have support for simple absolute file paths with globs
