--- a/src/starbash/templates/userconfig.toml
+++ b/src/starbash/templates/userconfig.toml
@@ -6,6 +6,15 @@
 [repo]
 kind = "preferences"
 
+#[aliases]
+# aliases can be used to map non standard (or non english) frame names to standard terms
+# This is also used to map filters based on common misspellings or variations.
+# We assume the first listed option in the list is the 'canonical' name used for printing etc...
+
+# frame types
+# dark = ["dark", "darks"]
+# etc...
+
 [analytics]
 # enabled = true # default is true - change to false if you don't want any analytics/crash-reports
 # include_user = false # default is false - change to true if you'd like your email added to crash reports/analytics
