fix for old asiair versions

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -89,7 +89,7 @@
                 "--debug",
                 "repo",
                 "add",
-                "./images/from_astroboy"
+                "./images/from_asiair"
             ]
         },
         {
