--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
         "ms-python.black-formatter",
         "tamasfe.even-better-toml",
         "github.copilot",
+        "skellock.just"
         // "google.geminicodeassist"
     ]
 }
