--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -74,6 +74,7 @@
             "justMyCode": false,
             "args": [
                 "--debug",
+                "--force",
                 "process",
                 "auto"
             ]
