--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pytest = ">=8.4.2,<9.0.0"
 pytest-cov = "^6.0.0"
 pytest-xdist = "^3.8.0"
 pre-commit = "^4.3.0"
+harlequin = "^2.4.1"
 
 [tool.poetry.scripts]
 starbash = "starbash.main:app"
