--- a/src/starbash/recipes/osc_dual_duo/starbash.toml
+++ b/src/starbash/recipes/osc_dual_duo/starbash.toml
@@ -72,7 +72,7 @@ script = '''
 # this stage is considered if the previous stage in this same array
 # was run.  It must be run inside the same tempdir (so that files from previous stage are available)
 
-description = "Stack OSC dual duo filter data, with separate Ha, Oiii and Sii channels"
+description = "Stack OSC dual duo (HaOiii + SiiOiii) filter data: with separate Ha, Oiii and Sii channels"
 
 input.source = "recipe" # we will use output files from previous stages in this same recipe as our input
 
