--- a/src/starbash/templates/repo/processed.toml
+++ b/src/starbash/templates/repo/processed.toml
@@ -12,4 +12,4 @@ kind = "processed"
 # This path should at least point to a FITS file - so that 'is output file generated' test can work.
 # if this expression includes a * at the end we assume multiple files might be generated and they are all
 # placed in the indicated directory.
-relative = "{date}/{target}/*"
+relative = "{target}/*"
