change to ruff linter

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -70,8 +70,7 @@
 		"vscode": {
 			"extensions": [
 				"ms-python.python",
-				"ms-python.vscode-pylance",
-				"ms-python.black-formatter",
+				"charliermarsh.ruff",
 				"tamasfe.even-better-toml",
 				"github.copilot",
 				"skellock.just"
