--- a/src/starbash/recipes/osc_single_duo/starbash.toml
+++ b/src/starbash/recipes/osc_single_duo/starbash.toml
@@ -13,7 +13,7 @@ author.email = "FIXMEsirilsomeone"
 
 # for single duo look for this
 auto.require.filter = ["HaOiii"]
-auto.require.camera = ["OSC"]
+auto.require.color = true
 
 # all sb.toml files can optionally contain a version section.  if version of the running starbash app is out of bounds a warning message will be printed
 # to the user and the file will be ignored for future processing.
